--- a/Fastclip.ipynb
+++ b/Fastclip.ipynb
@@ -32,7 +32,26 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 1
+     "prompt_number": 33
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "print \"TEST\""
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "TEST\n"
+       ]
+      }
+     ],
+     "prompt_number": 37
     },
     {
      "cell_type": "code",
@@ -44,14 +63,14 @@
       "global logOpen\n",
       "\n",
       "### File name ###\n",
-      "sampleName='ddx21_wt'\n",
+      "sampleName='ddx3wt'\n",
       "infilepath=os.getcwd() + '/' + 'rawdata/'\n",
       "outfilepath=os.getcwd() + '/results/%s/'%sampleName"
      ],
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 3
+     "prompt_number": 12
     },
     {
      "cell_type": "code",
@@ -2246,6 +2265,135 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
+    },
+    {
+     "cell_type": "heading",
+     "level": 4,
+     "metadata": {},
+     "source": [
+      "Scratchspace - "
+     ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "def RTcounts(RTfile):\n",
+      "    posRT_R1=pd.DataFrame(pd.read_table(RTfile,index_col=None,header=None,sep='\\t'))\n",
+      "    posRT_R1.columns=['Chr','Start','Strand']\n",
+      "    cts=posRT_R1.groupby(['Chr','Start']).size()\n",
+      "    return cts"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 10
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "# RT stop files\n",
+      "rt_pos_r1='%s_R1_3ptrimmed_filter_nodupe_5ptrimmed_notMappedTorepeat_mappedTohg19_withDupes_noBlacklist_noRepeat_pos_RTstop.bed'%sampleName\n",
+      "rt_pos_r2='%s_R2_3ptrimmed_filter_nodupe_5ptrimmed_notMappedTorepeat_mappedTohg19_withDupes_noBlacklist_noRepeat_pos_RTstop.bed'%sampleName\n",
+      "rt_neg_r1='%s_R1_3ptrimmed_filter_nodupe_5ptrimmed_notMappedTorepeat_mappedTohg19_withDupes_noBlacklist_noRepeat_negEdit_RTstop.bed'%sampleName\n",
+      "rt_neg_r2='%s_R2_3ptrimmed_filter_nodupe_5ptrimmed_notMappedTorepeat_mappedTohg19_withDupes_noBlacklist_noRepeat_negEdit_RTstop.bed'%sampleName"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 17
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "rt_grp_pos_1=RTcounts(outfilepath+rt_pos_r1)\n",
+      "rt_grp_pos_2=RTcounts(outfilepath+rt_pos_r2)\n",
+      "rt_grp_neg_1=RTcounts(outfilepath+rt_neg_r1)\n",
+      "rt_grp_neg_2=RTcounts(outfilepath+rt_neg_r2)"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 15
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "cat_r1=pd.concat([rt_grp_pos_1,rt_grp_neg_1],axis=0)\n",
+      "cat_r1.sort()\n",
+      "fname='%s_rep1_RTstops_unfiltered.csv'%sampleName\n",
+      "cat_r1.to_csv(outfilepath+fname)"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 28
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "cat_r2=pd.concat([rt_grp_pos_2,rt_grp_neg_2],axis=0)\n",
+      "cat_r2.sort()\n",
+      "fname='%s_rep2_RTstops_unfiltered.csv'%sampleName\n",
+      "cat_r2.to_csv(outfilepath+fname)"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 29
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "17482+10897"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 30,
+       "text": [
+        "28379"
+       ]
+      }
+     ],
+     "prompt_number": 30
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "def mergeRT(RTstopFiles,outfilename,threshold,expand,strand):\n",
+      "    # Usage: Merge RT stops between replicates and keep only those positions that exceed threshold.\n",
+      "    # Input: Files with RT stops for each replicate, outfile, threshold, strand, and bases to expand around RT stop.\n",
+      "    # Output: None. Writes merged RT stop file.\n",
+      "    cts_R1=RTcounts(RTstopFiles[0])\n",
+      "    cts_R2=RTcounts(RTstopFiles[1])\n",
+      "    m=pd.concat([cts_R1,cts_R2],axis=1,join='inner')\n",
+      "    m.columns=['Rep_1','Rep_2']\n",
+      "    m['Sum']=m['Rep_1']+m['Rep_2']\n",
+      "    m_filter=m[m['Sum']>threshold]\n",
+      "    f = open(outfilename, 'w')\n",
+      "    for i in m_filter.index:\n",
+      "        chrom=i[0]\n",
+      "        RT=i[1]\n",
+      "        count=m_filter.loc[i,'Sum']\n",
+      "        if RT > expand:\n",
+      "            read='\\t'.join((chrom,str(int(RT)-expand),str(int(RT)+expand),'CLIPread','255',strand))+'\\n'\n",
+      "        else:\n",
+      "            read='\\t'.join((chrom,str(int(RT)),str(int(RT)+expand),'CLIPread','255',strand))+'\\n'\n",
+      "        f.write(read*(count))"
+     ],
      "language": "python",
      "metadata": {},
      "outputs": []
