--- a/Fastclip_mm9.ipynb
+++ b/Fastclip_mm9.ipynb
@@ -32,7 +32,18 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 2
+     "prompt_number": "*"
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "print \"Hell\""
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": "*"
     },
     {
      "cell_type": "code",
@@ -44,14 +55,14 @@
       "global logOpen\n",
       "\n",
       "### File name ###\n",
-      "sampleName='TEST'\n",
+      "sampleName='MMhur'\n",
       "infilepath=os.getcwd() + '/' + 'rawdata/'\n",
       "outfilepath=os.getcwd() + '/results/%s/'%sampleName"
      ],
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 100
+     "prompt_number": "*"
     },
     {
      "cell_type": "code",
@@ -64,7 +75,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 75
+     "prompt_number": "*"
     },
     {
      "cell_type": "code",
@@ -78,38 +89,38 @@
       "k='1' # k=N distinct, valid alignments for each read in bt2 mapping.\n",
       "threshold=7 # Sum of RT stops (for both replicates) required to keep file. \n",
       "expand=15 # Bases to expand around RT position after RT stops are merged.\n",
-      "###repeat_index=os.getcwd() + '/docs/repeat/rep' # bt2 index for repeat RNA.\n",
-      "###repeatGenomeBuild=os.getcwd()+'/docs/repeat/repeatRNA.fa' # Sequence of repeat index.\n",
-      "###repeatAnnotation=os.getcwd()+'/docs/repeat/Hs_repeatIndex_positions.txt' # Repeat annotation file.\n",
-      "start18s=3657\n",
-      "end18s=5527\n",
-      "start5s=6623\n",
-      "end5s=6779\n",
-      "start28s=7935\n",
-      "end28s=12969\n",
-      "rRNAend=13314\n",
+      "repeat_index=os.getcwd() + '/docs/mm9/repeat/rep' # bt2 index for repeat RNA.\n",
+      "repeatGenomeBuild=os.getcwd()+'/docs/mm9/repeat/Mm9_repeatRNA.fa' # Sequence of repeat index.\n",
+      "repeatAnnotation=os.getcwd()+'/docs/mm9/repeat/Mm_repeatIndex_positions.txt' # Repeat annotation file.\n",
+      "start18s=4007\n",
+      "end18s=5876\n",
+      "start5s=6877\n",
+      "end5s=7033\n",
+      "start28s=8123\n",
+      "end28s=12836\n",
+      "rRNAend=13401\n",
       "threshold_rep=0 # RT stop threshold for repeat index.\n",
-      "index=os.getcwd() + '/docs/mm9/mm9' # bt2 index for mapping.\n",
+      "index=os.getcwd() + '/docs/mm9/mm9/mm9' # bt2 index for mapping.\n",
       "index_tag='mm9' # Name of bt2 index.\n",
-      "###genomeFile=os.getcwd()+'/docs/human.hg19.genome' # Genome file for bedGraph, etc.\n",
+      "genomeFile=os.getcwd()+'/docs/mm9/mm9.sizes' # Genome file for bedGraph, etc.\n",
       "genomeForCLIPper='-smm9' # Parameter for CLIPper.\n",
-      "###blacklistregions=os.getcwd()+'/docs/wgEncodeDukeMapabilityRegionsExcludable.bed' # Blacklist masker.\n",
-      "###repeatregions=os.getcwd()+'/docs/repeat_masker.bed' # Repeat masker.\n",
-      "###geneAnnot=glob.glob(os.getcwd()+'/docs/genes_types/*') # List of genes by type.\n",
-      "###snoRNAmasker=os.getcwd()+'/docs/snoRNA_reference/snoRNAmasker_formatted_5pExtend.bed' # snoRNA masker file.\n",
-      "###miRNAmasker=os.getcwd()+'/docs/miR_sort_clean.bed' # miRNA masker file.\n",
-      "###fivePUTRBed=os.getcwd()+'/docs/5pUTRs_Ensbl_sort_clean_uniq.bed' # UTR annotation file.\n",
-      "###threePUTRBed=os.getcwd()+'/docs/3pUTRs_Ensbl_sort_clean_uniq.bed' # UTR annotation file.\n",
-      "###cdsBed=os.getcwd()+'/docs/Exons_Ensbl_sort_clean_uniq.bed' # UTR annotation file.\n",
-      "###utrFile=os.getcwd()+'/docs/hg19_ensembl_UTR_annotation.txt' # UTR annotation file.\n",
-      "###genesFile=os.getcwd()+'/docs/hg19_ensembl_genes.txt' # Gene annotation file.\n",
+      "blacklistregions=os.getcwd()+'/docs/mm9/mm9-blacklist.bed' # Blacklist masker.\n",
+      "repeatregions=os.getcwd()+'/docs/Mm_mm9_repeatMasker_formatted.bed' # Repeat masker.\n",
+      "geneAnnot=glob.glob(os.getcwd()+'/docs/mm9/genes_types/*') # List of genes by type. \n",
+      "snoRNAmasker=os.getcwd()+'/docs/mm9/snoRNA_reference/mm9_snoRNAmasker_formatted_5pExtend.bed' # snoRNA masker file.\n",
+      "miRNAmasker=os.getcwd()+'/docs/mm9/mm9_miRNA.bed' # miRNA masker file.\n",
+      "fivePUTRBed=os.getcwd()+'/docs/mm9/mm9_5pUTR.bed' # UTR annotation file.\n",
+      "threePUTRBed=os.getcwd()+'/docs/mm9/mm9_3pUTR.bed' # UTR annotation file. \n",
+      "cdsBed=os.getcwd()+'/docs/mm9/mm9_exons.bed' # UTR annotation file. \n",
+      "utrFile=os.getcwd()+'/docs/mm9/mm9_ensembl_UTR_annotation.txt' # UTR annotation file. \n",
+      "genesFile=os.getcwd()+'/docs/mm9/mm9_ensembl_genes.txt' # Gene annotation file. \n",
       "sizesFile=os.getcwd()+'/docs/mm9/mm9.sizes' # Genome sizes file. \n",
-      "###snoRNAindex=os.getcwd()+'/docs/snoRNA_reference/sno_coordinates_hg19_formatted.bed' # snoRNA coordinate file."
+      "snoRNAindex=os.getcwd()+'/docs/mm9/snoRNA_reference/mm9_sno_coordinates_formatted.bed' # snoRNA coordinate file. "
      ],
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 76
+     "prompt_number": "*"
     },
     {
      "cell_type": "code",
@@ -131,7 +142,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 77
+     "prompt_number": "*"
     },
     {
      "cell_type": "code",
@@ -145,16 +156,8 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "Processing sample TEST\n"
-       ]
-      }
-     ],
-     "prompt_number": 78
+     "outputs": [],
+     "prompt_number": "*"
     },
     {
      "cell_type": "code",
@@ -186,16 +189,8 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "Trim 3p adapter from reads.\n"
-       ]
-      }
-     ],
-     "prompt_number": 79
+     "outputs": [],
+     "prompt_number": "*"
     },
     {
      "cell_type": "code",
